# itrustee_sdk

./: CHANGELOG  CMakeLists.txt  Makefile  README  README.en.md  README.md  README_EN.md
License/: Third_Party_Open_Source_Software_Notice.md
config/: worker_config
include/CA/: tee_client_api.h  tee_client_constants.h  tee_client_list.h  tee_client_log.h  tee_client_type.h
include/SDF/: sdf.h
include/TA/: pthread_attr.h  tee_arith_api.h  tee_core_api.h  tee_crypto_api.h  tee_defines.h  tee_mem_mgmt_api.h  tee_object_api.h  tee_property_api.h  tee_time_api.h  tee_trusted_storage_api.h  tee_uuid.h
include/TA/huawei_ext/: crypto_device_key_wrapper.h  crypto_ec_wrapper.h  crypto_ec_x509_wrapper.h  crypto_inner_wrapper.h  crypto_wrapper.h  crypto_x509_wrapper.h  permsrv_api_cert.h  permsrv_api_legacy.h  qsi_data_structure.h  tee_crypto_err.h  tee_crypto_hal.h  tee_err.h  tee_ext_api.h  tee_hw_ext_api_legacy.h  tee_log.h  tee_log_legacy.h  tee_openssl_err.h  tee_ra_api.h
include/TA/openssl/openssl/: opensslconf.h
src/CA/: libteec_adaptor.c
src/CA/cloud/: libteec_adaptor.c
test/CA/cert_manager/: Makefile  cert_common.h  cert_file.c  cert_file.h  cert_manager.c
test/CA/helloworld/: Makefile  ca_demo.c
test/CA/helloworld/cloud/: CMakeLists.txt  Makefile
test/CA/libqca/: Makefile
test/CA/libqca/include/: ra_client_api.h
test/CA/libqca/src/: ra_log.h  ra_operate_api.c  ra_operate_api.h
test/CA/rsa_demo/: rsa_ca_demo.c
test/CA/rsa_demo/cloud/: Makefile
test/CA/tee_upgrade/: Makefile  upgrade.c
test/TA/cert_manager/: CMakeLists.txt  Makefile  config.cmake  manifest.txt
test/TA/cert_manager/include/: cert_config.h
test/TA/cert_manager/src/: cert_logger.c  cert_manager.c
test/TA/helloworld/: CMakeLists.txt  Makefile  ReadMe.txt  auth_config.xml  config.cmake  config.mk  manifest.txt  ta_demo.c
test/TA/helloworld/cloud/: CMakeLists.txt  Makefile
test/TA/qta/: CMakeLists.txt  Makefile  ReadMe.txt  config.cmake  config.mk  config.sh  manifest.txt
test/TA/qta/manifest/: manifest-report.txt  manifest.txt
test/TA/qta/src/: tee_qta.c  tee_qta.h
test/TA/qta/src/container/: container_info.c  container_info.h  container_verify.c  container_verify.h  dlist.h
test/TA/qta/src/daa/: daa_structure.c  daa_structure.h  validate_akcert.c  validate_akcert.h
test/TA/rsa_demo/: config.mk  manifest.txt  rsa_ta_interface.c  rsa_ta_interface.h
test/TA/rsa_demo/cloud/: Makefile  config_cloud.ini
test/TA/rsa_demo/cloud/TA_cert/: readme.txt
test/TA/rsa_demo/cloud/signed_config/: readme.txt
tools/ca_auth_hash_tools/: ReadMe.txt  ca_caller_info.xml  calc_ca_caller_hash.py
tools/sdf-pre/: README.md  build-rpm.sh  sdf-pre.service  sdf-pre.sh  sdf-pre.spec
tools/tee-env-pre/: README.md  build-rpm.sh  tee-env-pre.service  tee-env-pre.sh  tee-env-pre.spec
